@@ -12,7 +12,7 @@ import com.udemy.helpdesk.repository.TicketRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Service
 public class DbService {
@@ -24,15 +24,15 @@ public class DbService {
     private TicketRepository ticketRepository;
 
     public void instanceDb() {
-        Technician tec1 = new Technician(null, "Tec 1", "09876543210", "tec1@email.com", "123");
+        Technician tec1 = new Technician(null, "Tec 1", "098.765.432-10", "tec1@email.com", "123");
         tec1.addProfiles(Profile.ADMIN);
 
-        Client cli1 = new Client(null, "Cli 1", "12345678901", "cli1@email", "123");
+        Client cli1 = new Client(null, "Cli 1", "123.456.789-01", "cli1@email", "123");
 
         Ticket t1 = new Ticket(null, Priority.MEDIUM, Status.PROGRESS, "Ticket 01", "First Ticket", tec1, cli1);
 
-        technicianRepository.saveAll(Arrays.asList(tec1));
-        personRepository.saveAll(Arrays.asList(cli1));
-        ticketRepository.saveAll(Arrays.asList(t1));
+        technicianRepository.saveAll(List.of(tec1));
+        personRepository.saveAll(List.of(cli1));
+        ticketRepository.saveAll(List.of(t1));
     }
 }
